fix: Zoom banner spacing

--- a/src/app/shared/zoom-app-banner/zoom-app-banner.component.scss
+++ b/src/app/shared/zoom-app-banner/zoom-app-banner.component.scss
@@ -19,16 +19,6 @@
       position: absolute;
       top: 4px;
       right: 4px;
-      height: 30px;
-      width: 30px;
-      line-height: 30px;
-  
-      mat-icon {
-        font-size: 16px;
-        line-height: 16px;
-        height: 16px;
-        width: 16px;
-      }
     }
 
     mat-card-content {
@@ -57,4 +47,8 @@
     @media screen and (max-width: 600px) {
       display: none;
     }
+  }
+
+  mat-card-actions {
+    gap: 0.5rem;
   }
